Rebrand from AccelCQ to Acxelin Quantum LLC
- Update company name from AccelCQ/AccelCQ LLC/AccelCQ Inc to Acxelin Quantum LLC
- Update email domain from @accelcq.com to @acxelinquantum.com
- Rename logo file from accelcq-logo.png to acxelin-quantum-logo.png
- Update package name from accelcq-website to acxelin-quantum-website
- Update all page titles, meta descriptions, and content across all pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accelcq-website",
+  "name": "acxelin-quantum-website",
   "private": true,
   "version": "0.1.0",
   "type": "module",
